--- a/manifest.yml
+++ b/manifest.yml
@@ -1,8 +1,8 @@
 ---
 applications:
-- name: kimilguk
+- name: gainnam
   memory: 1024M
   disk_quota: 1024M
   instances: 1
-  host: kimilguk
+  host: gainnam
   domain: paas-ta.org
